Help/prop_tgt/BUILD_WITH_INSTALL_NAME_DIR.rst
@@ -9,5 +9,5 @@ This property is initialized by the value of the variable
 :variable:`CMAKE_BUILD_WITH_INSTALL_NAME_DIR` if it is set when a target is
 created.
 
-If this property is not set, the value of :prop_tgt:`BUILD_WITH_INSTALL_RPATH`
-is used in its place.
+If this property is not set and policy :policy:`CMP0068` is not ``NEW``, the
+value of :prop_tgt:`BUILD_WITH_INSTALL_RPATH` is used in its place.
