Help/release/dev/install_name_policy.rst
@@ -6,3 +6,6 @@ install_name_policy
   control whether to use the :prop_tgt:`INSTALL_NAME_DIR` target property
   value for binaries in the build tree.  This is for macOS ``install_name``
   as :prop_tgt:`BUILD_WITH_INSTALL_RPATH` is for ``RPATH``.
+
+* On macOS, ``RPATH`` settings such as :prop_tgt:`BUILD_WITH_INSTALL_RPATH`
+  no longer affect the ``install_name`` field.  See policy :policy:`CMP0068`.
